--- a/style/style.css
+++ b/style/style.css
@@ -55,7 +55,7 @@
     --resume-container-color: #FAFAFA;
     --resume-container-color-alt: #F0EFEF;
 
-     /* ============== Font and typography ============*/
+    /* ============== Font and typography ============*/
     /* .5rem = 8px | 1rem = 16px .....*/
     --resume-body-font: 'Roboto', sans-serif;
     --resume-biggest-font-size: ;
@@ -91,89 +91,92 @@
 }
 
 /* ============== BASE ============= */
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-html{
+html {
     scroll-behavior: smooth;
 }
 
 
-body{
+body {
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
     background-color: var(--body-color);
     color: var(--text-color);
-    transition: background .4s ; /* For dark mode animation */
+    transition: background .4s;
+    /* For dark mode animation */
 }
 
-h1,h2,h3{
+h1,
+h2,
+h3 {
     color: var(--title-color);
     font-family: var(--title-font);
     font-weight: var(--font-medium);
 }
 
-ul{
+ul {
     list-style: none;
 }
 
-a{
+a {
     text-decoration: none;
     color: var(--text-color);
 }
 
 /* ============== REUSABLE CSS CLASSES ======================== */
 
-.container{
+.container {
     max-width: 1350px;
     margin-inline: 1.5rem;
 }
 
-.grid{
+.grid {
     display: grid;
     gap: 1.5rem;
 }
 
-.section{
+/* .section {
     padding-block: 2.5rem;
-}
+} */
 
-.section__border{
+.section__border {
     border-bottom: 1px solid var(--title-color);
     padding-bottom: 3.5rem;
 }
 
 .section__title,
-.section__subtitle{
+.section__subtitle {
     text-align: center;
 }
 
-.section__title{
+.section__title {
     font-size: var(--h1-font-size);
     font-weight: var(--font-semi-bold);
     margin: .25rem;
 }
 
-.section__subtitle{
+.section__subtitle {
     display: block;
     font-size: var(--small-font-size);
     color: var(--text-color-light);
     margin-bottom: 3rem;
 }
 
-.main{
-    overflow: hidden; /* For animation */
+.main {
+    overflow: hidden;
+    /* For animation */
     padding-bottom: 2rem;
-    background: linear-gradient(to bottom, #fff , rgb(243, 240, 240));
+    background: linear-gradient(to bottom, #fff, rgb(243, 240, 240));
 }
 
 
 /* ============== THEME ============ */
-
-.change-theme{
+.change-theme {
     font-size: 1.25rem;
     color: var(--title-color);
     cursor: pointer;
@@ -182,7 +185,7 @@ a{
 
 /* ============ HEADER & NAV ==============*/
 
-.header{
+.header {
     width: 100%;
     position: fixed;
     bottom: 2rem;
@@ -191,7 +194,7 @@ a{
     padding: 0 15px;
 }
 
-.nav{
+.nav {
     height: calc(var(--header-height) + .5rem);
     display: flex;
     justify-content: space-between;
@@ -200,36 +203,38 @@ a{
     box-shadow: 0 4px 20px hsla(207, 24%, 35%, .1);
     padding-inline: 1.5rem;
     border-radius: 3rem;
-    transition: background .4s ; /* For dark mode animation */
+    transition: background .4s;
+    /* For dark mode animation */
 }
 
 .nav__logo,
 .nav__toggle,
-.nav__close{
+.nav__close {
     color: var(--title-color);
 }
 
-.window_size-logo{
+.window_size-logo {
     display: none;
 }
 
-.nav__logo{
+.nav__logo {
     font-family: var(--title-font);
     font-weight: var(--font-medium);
 }
-.nav__logo img{
+
+.nav__logo img {
     width: 40px;
     height: 40px;
 }
 
-.nav__toggle{
+.nav__toggle {
     display: flex;
     font-size: 1.25rem;
     cursor: pointer;
 }
 
 @media screen and (max-width:1023px) {
-    .nav__menu{
+    .nav__menu {
         max-width: 500px;
         position: fixed;
         width: 88%;
@@ -243,17 +248,17 @@ a{
         transition: bottom .3s;
         bottom: -60%;
     }
-   
-   
+
+
 }
 
-.nav__list{
+.nav__list {
     grid-template-columns: repeat(3, max-content);
     justify-content: center;
     gap: 2rem 3rem;
 }
 
-.nav__link{
+.nav__link {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -263,15 +268,15 @@ a{
     transition: color .3s;
 }
 
-.nav__link:hover{
+.nav__link:hover {
     color: var(--active-color);
 }
 
-.nav__link i{
+.nav__link i {
     font-size: 1.25rem;
 }
 
-.nav__close{
+.nav__close {
     position: absolute;
     right: 1.5rem;
     bottom: .7rem;
@@ -280,10 +285,11 @@ a{
 }
 
 /* Show menu */
-.show-menu{
+.show-menu {
     bottom: 2rem;
 }
-.nav__button{
+
+.nav__button {
     display: flex;
     align-items: center;
     column-gap: 1.5rem;
@@ -291,65 +297,74 @@ a{
 
 
 /* Active link */
-.active-link{
+.active-link {
     color: var(--active-color);
 }
 
 
 /* ============ HOME ==============*/
 
-.home___container{
+.home___container {
     padding: 5rem 2rem 0 2rem;
     display: flex;
 }
+
 .home__left-box,
-.home__right-box{
+.home__right-box {
     width: 50%;
 }
-.home__left-box{
+
+.home__left-box {
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 1rem;
 }
-.home__right-box{
+
+.home__right-box {
     display: grid;
     place-items: center;
 }
-.home__right-box img{
-width: 100%;
-max-width: 500px;
+
+.home__right-box img {
+    width: 100%;
+    max-width: 500px;
 }
 
-.home__line{
+.home__line {
     background: var(--title-color);
     width: 30px;
     height: .2rem;
 }
-.founder_name{
+
+.founder_name {
     color: var(--title-color);
     font-size: var(--h2-font-size);
     font-family: var(--title-font);
 }
-.home__title{
+
+.home__title {
     color: var(--active-color);
     font-family: var(--body-font);
     font-size: 4rem;
     font-weight: var(--font-semi-bold);
-    
+
 }
-.home__info-title{
+
+.home__info-title {
     font-family: var(--body-font);
     color: var(--text-color-light);
     font-weight: 400;
     font-size: var(--h2-font-size);
+    text-align: justify;
 }
 
-.home__buttons{
+.home__buttons {
     display: flex;
     gap: 20px;
 }
-.home__buttons button{
+
+.home__buttons button {
     border: none;
     outline: none;
     padding: 13px 23px;
@@ -361,64 +376,214 @@ max-width: 500px;
     cursor: pointer;
     transition: all .2s ease;
 }
-.home__buttons button:nth-child(1){
+
+.home__buttons button:nth-child(1) {
     background-color: var(--active-color);
 }
-.home__buttons button:nth-child(2){
-    background-color: var(--title-color); 
+
+.home__buttons button:nth-child(2) {
+    background-color: var(--title-color);
 }
-.home__buttons button:active{
+
+.home__buttons button:active {
     scale: .9;
 }
 
 /* =========================================== */
 /* ========== RESPONSIVE HOME ============== */
 /* ============================================ */
-@media screen and (max-width: 980px){
-    .home___container{
+@media screen and (max-width: 980px) {
+    .home___container {
         flex-direction: column;
         align-items: center;
         padding-top: 5rem;
     }
+
     .home__left-box,
-    .home__right-box{
+    .home__right-box {
         width: 100%;
     }
-    .home__right-box img{
+
+    .home__right-box img {
         max-width: 600px;
     }
 
-    .founder_name{
+    .founder_name {
         color: var(--title-color);
         font-size: var(--h2-font-size);
         font-family: var(--title-font);
     }
-    .home__title{
+
+    .home__title {
         color: var(--active-color);
         font-family: var(--body-font);
         font-size: 10vw;
         font-weight: var(--font-semi-bold);
-        
+
     }
-    .home__info-title{
+
+    .home__info-title {
         font-family: var(--body-font);
         color: var(--text-color-light);
         font-weight: 400;
         font-size: vw;
         margin-bottom: 1rem;
     }
-    .home__buttons button{
+
+    .home__buttons button {
         font-size: 2vw;
     }
 }
-@media screen and (max-width: 480px){
-    .home___container{
+
+@media screen and (max-width: 480px) {
+    .home___container {
         padding: 3rem 0 0 0;
     }
-    .home__buttons button{
+
+    .home__buttons button {
         font-size: 3vw;
     }
 }
+
+
+/* ==================================================================
+==================================================================*/
+/*====================== ABOUT SECTION ======================*/
+.about__container {
+    display: flex;
+    justify-content: center;
+    margin: 4rem 0;
+    gap: 4rem;
+    padding: 0 2rem;
+}
+
+.about__left-box,
+.about__right-box {
+    width: 50%;
+}
+
+.about__left-box {
+    display: grid;
+    place-items: center;
+    border-bottom: 10px solid #FF3131;
+    border-left: 10px solid #FF3131;
+    background: var(--text-color-light);
+    border-radius: 6rem 0;
+}
+
+.about__left-box img {
+    width: 100%;
+    max-width: 450px;
+}
+
+.about__right-box {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+}
+
+.about__right-box h1 {
+    font-size: var(--h1-font-size);
+    font-weight: var(--font-semi-bold);
+    font-family: var(--title-font);
+    color: var(--active-color);
+}
+
+.about__right-box h3 {
+    font-family: var(--body-font);
+    color: var(--text-color-light);
+    font-weight: 400;
+    font-size: var(--h3-font-size);
+    text-align: justify;
+}
+
+.about__right-box ul {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+
+.about__right-box ul li {
+    list-style: none;
+}
+
+.about__right-box ul i {
+    font-size: var(--h1-font-size);
+    color: var(--text-color-light);
+    cursor: pointer;
+    transition: all .3s ease;
+}
+
+.about__right-box ul li:nth-child(1) i:hover {
+    color: #000;
+}
+
+.about__right-box ul li:nth-child(2) i:hover {
+    color: blue;
+}
+
+.about__right-box ul li:nth-child(3) i:hover {
+    color: rgb(214, 41, 118);
+}
+
+.about__right-box ul li:nth-child(4) i:hover {
+    color: #FF3131;
+}
+
+.about__right-box button {
+    border: none;
+    outline: none;
+    padding: 13px 23px;
+    font-size: var(--h3-font-size);
+    font-family: var(--body-font);
+    font-weight: var(--font-semi-bold);
+    letter-spacing: 1px;
+    color: #fff;
+    cursor: pointer;
+    transition: all .2s ease;
+    background-color: var(--active-color);
+    width: 35%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    gap: .5rem;
+}
+
+.about__right-box button:active {
+    scale: .9;
+}
+
+.about__right-box button span {
+    display: grid;
+    place-items: center;
+}
+
+.about__right-box button:hover span {
+    transform: translateX(10px);
+    transition: .3s ease;
+}
+
+@media screen and (max-width: 800px) {
+    .about__container {
+        display: flex;
+        flex-direction: column;
+        margin: 4rem 0;
+        gap: 2rem;
+    }
+
+    .about__left-box,
+    .about__right-box {
+        width: 100%;
+    }
+
+    .about__right-box button {
+        font-size: vw;
+        padding: 10px 5px;
+    }
+}
+
+
 /* ==================================================================
 ==================================================================
 ==================================================================
@@ -430,42 +595,49 @@ max-width: 500px;
 /*====================== BREAKPOINTS ======================*/
 /* For small device */
 @media screen and (max-width: 340px) {
-    .container{
+    .container {
         margin-inline: .5rem;
     }
 
-    .nav__menu{
+    .nav__menu {
         padding-bottom: 4rem;
     }
-    .nav__list{
+
+    .nav__list {
         gap: 1rem 1.25rem;
     }
-   
+
 }
+
 /* For medium device */
 @media screen and (min-width: 576px) {
+
     .nav,
-    .nav__menu{
+    .nav__menu {
         width: 380px;
     }
-    .nav{
+
+    .nav {
         margin: 0 auto;
     }
 }
 
 /* For large device */
-@media screen and (min-width: 1023px){
-    .nav__logo img{
+@media screen and (min-width: 1023px) {
+    .nav__logo img {
         width: 60px;
         height: 60px;
     }
-    .window_size-logo{
+
+    .window_size-logo {
         display: block;
     }
-    .mobile_size-logo{
+
+    .mobile_size-logo {
         display: none;
     }
-    .header{
+
+    .header {
         top: 0;
         bottom: initial;
         background-color: var(--body-color);
@@ -473,7 +645,7 @@ max-width: 500px;
 
     }
 
-    .nav{
+    .nav {
         width: initial;
         height: calc(var(--header-height) + 2rem);
         box-shadow: none;
@@ -482,70 +654,77 @@ max-width: 500px;
         margin-inline: 1.5rem;
         padding: 0;
     }
+
     .nav__link i,
     .nav__toggle,
-    .nav__close{
+    .nav__close {
         display: none;
     }
 
-    .nav__menu{
+    .nav__menu {
         width: 100%;
         margin-left: auto;
         background-color: var(--body-color);
         transition: background .4s;
     }
 
-    .nav__list{
+    .nav__list {
         display: flex;
         column-gap: 3rem;
         align-items: center;
         justify-content: center;
     }
-    .nav__link{
+
+    .nav__link {
         font-size: var(--normal-font-size);
         font-weight: 500;
     }
 
     .dark-theme .nav,
-    .dark-theme .nav__menu{
+    .dark-theme .nav__menu {
         background-color: var(--body-color);
         box-shadow: none;
     }
 
-    .change-theme{
+    .change-theme {
         color: var(--text-color-light);
     }
-    .change-theme:hover{
+
+    .change-theme:hover {
         color: var(--title-color);
     }
 
-    .scrollup{
+    .scrollup {
         right: 2rem;
     }
-    .show-scroll{
+
+    .show-scroll {
         bottom: 3rem;
     }
 
     /* Change background header */
-    .bg-header{
+    .bg-header {
         box-shadow: 0 4px 20px hsla(207, 24%, 35%, .1);
     }
-    .dark-theme .bg-header{
+
+    .dark-theme .bg-header {
         box-shadow: 0 6px 24px hsl(207, 24%, 8%, .6);
     }
 
-    
+
     /* RESPONSIVE HOME */
-    .home___container{
+    .home___container {
         padding-top: 7rem;
     }
-    .home__right-box img{
+
+    .home__right-box img {
         max-width: 600px;
     }
 }
-@media screen and (min-width: 1048px){
-    .container{
+
+@media screen and (min-width: 1048px) {
+    .container {
         margin-inline: auto;
     }
-    
+
 }
