--- a/style/style.css
+++ b/style/style.css
@@ -188,10 +188,10 @@ a {
 .header {
     width: 100%;
     position: fixed;
-    bottom: 2rem;
+    bottom: 1rem;
     left: 0;
     z-index: var(--z-fixed);
-    padding: 0 15px;
+    padding: 0 0;
 }
 
 .nav {
@@ -449,7 +449,8 @@ a {
 /* ==================================================================
 ==================================================================*/
 /*====================== ABOUT SECTION ======================*/
-.about__container {
+.about__container,
+.skills__container {
     display: flex;
     justify-content: center;
     margin: 4rem 0;
@@ -458,7 +459,9 @@ a {
 }
 
 .about__left-box,
-.about__right-box {
+.about__right-box,
+.skill__left-box,
+.skill__right-box {
     width: 50%;
 }
 
@@ -483,14 +486,16 @@ a {
     justify-content: center;
 }
 
-.about__right-box h1 {
+.about__right-box h1,
+.skill__left-box h1 {
     font-size: var(--h1-font-size);
     font-weight: var(--font-semi-bold);
     font-family: var(--title-font);
     color: var(--active-color);
 }
 
-.about__right-box h3 {
+.about__right-box h3,
+.skill__left-box p {
     font-family: var(--body-font);
     color: var(--text-color-light);
     font-weight: 400;
@@ -565,7 +570,8 @@ a {
 }
 
 @media screen and (max-width: 800px) {
-    .about__container {
+    .about__container,
+    .skills__container {
         display: flex;
         flex-direction: column;
         margin: 4rem 0;
@@ -573,7 +579,9 @@ a {
     }
 
     .about__left-box,
-    .about__right-box {
+    .about__right-box,
+    .skill__left-box,
+    .skill__right-box {
         width: 100%;
     }
 
@@ -581,9 +589,139 @@ a {
         font-size: vw;
         padding: 10px 5px;
     }
+
+    .skills__container{
+        flex-flow: column-reverse;
+        gap: 6rem;
+    }
 }
 
 
+
+/* ==================================================================
+==================================================================*/
+/*====================== SKILLS SECTION ======================*/
+
+.Skills__container{
+    border: 1px solid #fff;
+}
+.skill__left-box{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+}
+.skill__left-box h3{
+    font-family: var(--body-font);
+    font-size: var(--normal-font-size);
+    color: var(--title-color);
+}
+.skill__left-box h3 span{
+    color: var(--active-color);
+
+}
+.skill__tab ul{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-top: 1rem;
+    gap: 10px;
+}
+.skill__tab ul li,
+.skill__tab ul i{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .4rem;
+}
+.skill__tab ul li{
+    font-family: var(--body-color);
+    font-size: var(--normal-font-size);
+    color: var(--text-color);
+    font-weight: var(--font-medium);
+    cursor: pointer;
+    transition: all .3s ease;
+}
+.skill__tab ul li:hover{
+    color: var(--active-color);
+}
+.skill__tab ul li.active{
+    color: var(--active-color);
+}
+.skill__tab ul span{
+    margin-left: 10px;
+    color: var(--title-color);
+}
+
+.skill__right-box .skills__name.hide{
+    display: none;
+}
+.skill__right-box{
+    height: 50vh;
+}
+
+.skill__right-box ul{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    place-items: center;
+    max-width: 450px;
+    margin: 0 auto;
+
+}
+.skill__right-box li{
+    background: #ffdfdf;
+    display: grid;
+    place-items: center;
+    width: 85px;
+    height: 110px;
+    border-radius: 40px;
+}
+
+.skill__right-box li img{
+    width: 50px;
+}
+.skill__box
+{
+    display: grid;
+    place-items: center;
+    gap: 10px;
+}
+.skill__name{
+    display: grid;
+    place-items: center;
+    gap: 5px;
+}
+.title{
+    color: var(--title-color);
+    font-family: var(--title-font);
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
+}
+.subTitle{
+    color: var(--text-color-light);
+    font-family: var(--body-font);
+    font-size: var(--small-font-size);
+
+}
+
+@media screen and (max-width: 386px){
+    .skill__right-box li{
+        width: 70px;
+        height: 100px;
+        border-radius: 40px;
+    }
+    .skill__right-box li img{
+        width: 38px;
+    }
+    .skill__right-box ul{
+        gap: 25px;
+    }
+    .skills__container{
+        gap: 4rem;
+    }
+
+}
 /* ==================================================================
 ==================================================================
 ==================================================================
