--- a/style/style.css
+++ b/style/style.css
@@ -156,10 +156,16 @@ a {
 */
 
 .About__container,
-.Skills__container {
+.Skills__container,
+.Project__container {
     padding-top: 6rem;
 }
 
+.about__right-box h1 span,
+.skill__left-box h1 span,
+.project__container h1 span{
+    color: #000;
+}
 .section__title,
 .section__subtitle {
     text-align: center;
@@ -621,6 +627,7 @@ a {
         flex-flow: column-reverse;
         gap: 4rem;
     }
+
 }
 
 
@@ -708,7 +715,7 @@ a {
 }
 
 .skill__right-box li {
-    background: #ffdfdf;
+    background: #fee2e2;
     display: grid;
     place-items: center;
     width: 85px;
@@ -766,12 +773,88 @@ a {
     }
 
     .About__container,
-    .Skills__container {
+    .Skills__container,
+    .Project__container {
         padding-top: 4rem;
     }
 
 }
 
+/*====================== PORTFOLIO ======================*/
+.Project__container{
+    background-color: #FF3131;
+    width: 100%;
+}
+.project__container{
+    width: 95%;
+    margin: 0 auto;
+}
+.project__container h1{
+    text-align: center;
+    color: var(--body-color);
+    font-size: var(--h1-font-size);
+    font-weight: var(--font-semi-bold);
+    font-family: var(--title-font);
+}
+.project__container h1 span{
+    color: #000;
+}
+
+.project__main{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 2rem;
+    margin-top: 2rem;
+}
+.project__card{
+    overflow: hidden;
+    width: 100%;
+    height: auto;
+    position: relative;
+}
+.project__card img{
+    width: 100%;
+    transition: all .3s ease;
+}
+
+.cover_icon{
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-items: center;
+    background: rgba(0,0,0,0.7);
+    top: -100%;
+    transition: top .3s ease;
+}
+.cover_icon i{
+    cursor: pointer;
+    color: #fff;
+    font-size: var(--h2-font-size);
+    font-weight: var(--font-medium);
+}
+/* .project__card:hover .cover_icon{
+    top: 0;
+} */
+
+@media screen and (max-width:800px) {
+    .project__main{
+        grid-template-columns: repeat(3, 1fr);
+        gap: 1.5rem;
+        margin-top: 2rem;
+    }
+    
+}
+@media screen and (max-width:420px) {
+    .project__main{
+        grid-template-columns: repeat(2, 1fr);
+        gap: .8rem;
+        margin-top: 1rem;
+    }
+    
+}
 /* ==================================================================
 ==================================================================
 ==================================================================
