--- a/style/style.css
+++ b/style/style.css
@@ -391,6 +391,7 @@ a {
     color: #fff;
     cursor: pointer;
     transition: all .2s ease;
+    box-shadow: 8px 8px 20px rgba(0,0,0,0.7);
 }
 
 .home__buttons button:nth-child(1) {
@@ -501,6 +502,7 @@ a {
     flex-direction: column;
     gap: 1rem;
     justify-content: center;
+    overflow: hidden;
 }
 
 .about__right-box h1,
@@ -570,6 +572,7 @@ a {
     justify-content: center;
     display: flex;
     gap: .5rem;
+    box-shadow: 8px 8px 20px rgba(0,0,0,0.7);
 }
 
 .about__right-box button:active {
@@ -802,6 +805,7 @@ a {
 .Project__container{
     background-color: #FF3131;
     width: 100%;
+    margin-top: 4rem;
 }
 .project__container{
     width: 95%;
@@ -813,16 +817,48 @@ a {
     font-size: var(--h1-font-size);
     font-weight: var(--font-semi-bold);
     font-family: var(--title-font);
+    text-transform: uppercase;
 }
-.project__container h1 span{
-    color: #000;
+.project__container h2{
+    text-align: center;
+    color: var(--body-color);
+    font-size: var(--h3-font-size);
+    font-weight: 500;
+    font-family: var(--body-font);
+    text-transform: uppercase;
+    letter-spacing: 2px;
 }
 
+.project__buttons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 1rem;
+}
+.project__buttons button{
+    background: #fff;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-size: var(--small-font-size);
+    font-family: var(--body-font);
+    color: var(--title-color);
+    border-radius: 5px;
+    box-shadow: 8px 8px 20px rgba(0,0,0,0.7);
+    padding: 10px 15px;
+    font-weight: 500;
+    transition: all .3s ease;
+}
+.project__buttons button:hover,
+.project__buttons button.active{
+    background: var(--title-color);
+    color: #fff;
+}
 .project__main{
     width: 100%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 2rem;
+    gap: 1rem;
     margin-top: 2rem;
 }
 .project__card{
@@ -860,7 +896,6 @@ a {
 @media screen and (max-width:800px) {
     .project__main{
         grid-template-columns: repeat(3, 1fr);
-        gap: 1.5rem;
         margin-top: 2rem;
     }
     
