--- a/style/style.css
+++ b/style/style.css
@@ -16,6 +16,8 @@
     --active-color: #FF3131;
     --background-color:linear-gradient(to bottom, #fff, rgb(243, 240, 240));
     --box-shadow:8px 8px 20px rgba(0,0,0,0.7);
+    --card-background: hsl(207, 4%, 95%);
+    
     
 
     /* === Change the first number ====*/
@@ -228,6 +230,8 @@ body.dark-theme{
     --container-color: hsl(207, 4%, 12%);
     --background-color: linear-gradient(to bottom, hsl(207, 4%, 10%), hsl(207, 4%, 12%));
     --box-shadow:0 4px 12px hsl(207, 24%, 35%, .5);
+    --card-background: rgba(255,255,255,0.1);
+    --card-shadow: 20px 20px 50px rgba(0,0,0,0.5);
 }
 
 /* .dark-theme  */
@@ -758,12 +762,15 @@ body.dark-theme{
 }
 
 .skill__right-box li {
-    background: var(--container-color);
+    background: var(--card-background);
     display: grid;
     place-items: center;
     width: 85px;
     height: 110px;
     border-radius: 40px;
+    border-top: 1px solid rgba(255,255,255,0.1);
+    border-left: 1px solid rgba(255,255,255,0.1);
+    box-shadow: var(--card-shadow);
 }
 
 .skill__right-box li img {
@@ -988,7 +995,7 @@ body.dark-theme{
     height: 270px;
     padding: 20px;
     /* background: var(--container-color); */
-    background: rgba(255,255,255,0.1);
+    background: var(--card-background);
     border-top: 1px solid rgba(255,255,255,0.1);
     border-left: 1px solid rgba(255,255,255,0.1);
     backdrop-filter: blur(5px);
@@ -997,7 +1004,7 @@ body.dark-theme{
     justify-content: center;
     row-gap: 1rem;
     flex-direction: column;
-    box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
+    box-shadow: var(--card-background);
     cursor: pointer;
 }
 .services_card img{
