--- a/style/style.css
+++ b/style/style.css
@@ -17,6 +17,7 @@
     --background-color:linear-gradient(to bottom, #fff, rgb(243, 240, 240));
     --box-shadow:8px 8px 20px rgba(0,0,0,0.7);
     --card-background: hsl(207, 4%, 95%);
+    --scroll-up-background: #FF3131;
     
     
 
@@ -232,6 +233,7 @@ body.dark-theme{
     --box-shadow:0 4px 12px hsl(207, 24%, 35%, .5);
     --card-background: rgba(255,255,255,0.1);
     --card-shadow: 20px 20px 50px rgba(0,0,0,0.5);
+    --scroll-up-background: rgba(255,255,255,0.1);
 }
 
 /* .dark-theme  */
@@ -1347,7 +1349,7 @@ body.dark-theme{
 }
 
 .scrollup{
-    background: var(--active-color);
+    background: var(--scroll-up-background);
     position: fixed;
     bottom: -30%;
     right: 20px;
@@ -1358,7 +1360,11 @@ body.dark-theme{
     display: grid;
     place-items: center;
     transition: bottom .3s, transform .3s;
-    box-shadow: 0 4px 12px hsl(207, 24%, 35%, .5);
+    box-shadow: var(--card-shadow);
+    border-top: 1px solid rgba(255,255,255,0.1);
+    border-left: 1px solid rgba(255,255,255,0.1);
+    backdrop-filter: blur(5px);
+    box-shadow: var(--card-shadow);
 }
 .scrollup i{
     font-size: var(--h3-font-size);
